maze.lessons.maze.island.IslandMaze.scala.error
Escaper:5: error: illegal start of statement
    ) 
    ^Escaper:9: error: ')' expected but '}' found.
}
^